// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResetPasswordForm/> should fail submitting because of easy passwords 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    heading={true}
  >
    Reset password
  </Text>
  <View
    marginB-10={true}
  >
    <View
      paddingB-8={true}
      paddingL-12={true}
      paddingR-12={true}
      paddingT-8={true}
      style={
        Array [
          Object {
            "backgroundColor": "#FAFAF1",
            "borderRadius": 8,
          },
          undefined,
        ]
      }
    >
      <TouchableWithoutFeedback>
        <TextInput
          accessibilityLabel="resetPassword-newPassword"
          allowFontScaling={true}
          autoCapitalize="none"
          color="#FAFAF1"
          enableErrors={false}
          floatOnFocus={true}
          floatingPlaceholder={true}
          floatingPlaceholderColor={
            Object {
              "default": "#FAFAF1",
              "error": "#FAFAF1",
              "focus": "#FAFAF1",
            }
          }
          floatingPlaceholderStyle={Object {}}
          hideUnderline={true}
          infoText={true}
          placeholder="Enter new password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Array [
              undefined,
              Object {
                "marginBottom": 4,
                "marginTop": -4,
              },
            ]
          }
          testID="resetPassword-newPassword"
          underlineColorAndroid="transparent"
          value="pass"
        />
      </TouchableWithoutFeedback>
    </View>
    <Text
      accessibilityLabel="textField-helperText"
      error={false}
      style={
        Object {
          "fontSize": 12,
          "marginTop": 2,
          "paddingLeft": 12,
        }
      }
      success={false}
      testID="textField-helperText"
    >
       
    </Text>
  </View>
  <View
    marginB-10={true}
  >
    <View
      paddingB-8={true}
      paddingL-12={true}
      paddingR-12={true}
      paddingT-8={true}
      style={
        Array [
          Object {
            "backgroundColor": "#FAFAF1",
            "borderRadius": 8,
          },
          undefined,
        ]
      }
    >
      <TouchableWithoutFeedback>
        <TextInput
          accessibilityLabel="resetPassword-passwordRepeat"
          allowFontScaling={true}
          autoCapitalize="none"
          color="#FAFAF1"
          enableErrors={false}
          floatOnFocus={true}
          floatingPlaceholder={true}
          floatingPlaceholderColor={
            Object {
              "default": "#FAFAF1",
              "error": "#FAFAF1",
              "focus": "#FAFAF1",
            }
          }
          floatingPlaceholderStyle={Object {}}
          hideUnderline={true}
          infoText={true}
          placeholder="Confirm password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Array [
              undefined,
              Object {
                "marginBottom": 4,
                "marginTop": -4,
              },
            ]
          }
          testID="resetPassword-passwordRepeat"
          underlineColorAndroid="transparent"
          value="pass"
        />
      </TouchableWithoutFeedback>
    </View>
    <Text
      accessibilityLabel="textField-helperText"
      error={false}
      style={
        Object {
          "fontSize": 12,
          "marginTop": 2,
          "paddingLeft": 12,
        }
      }
      success={false}
      testID="textField-helperText"
    >
       
    </Text>
  </View>
  <View
    marginB-10={true}
  >
    <TouchableOpacity
      accessibilityLabel="resetPassword-submit"
      label="Reset password"
      loading={false}
      testID="resetPassword-submit"
    />
  </View>
</View>
`;

exports[`<ResetPasswordForm/> should fail submitting because of non-matching passwords 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    heading={true}
  >
    Reset password
  </Text>
  <View
    marginB-10={true}
  >
    <View
      paddingB-8={true}
      paddingL-12={true}
      paddingR-12={true}
      paddingT-8={true}
      style={
        Array [
          Object {
            "backgroundColor": "#FAFAF1",
            "borderRadius": 8,
          },
          undefined,
        ]
      }
    >
      <TouchableWithoutFeedback>
        <TextInput
          accessibilityLabel="resetPassword-newPassword"
          allowFontScaling={true}
          autoCapitalize="none"
          color="#FAFAF1"
          enableErrors={false}
          floatOnFocus={true}
          floatingPlaceholder={true}
          floatingPlaceholderColor={
            Object {
              "default": "#FAFAF1",
              "error": "#FAFAF1",
              "focus": "#FAFAF1",
            }
          }
          floatingPlaceholderStyle={Object {}}
          hideUnderline={true}
          infoText={true}
          placeholder="Enter new password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Array [
              undefined,
              Object {
                "marginBottom": 4,
                "marginTop": -4,
              },
            ]
          }
          testID="resetPassword-newPassword"
          underlineColorAndroid="transparent"
          value="pass-123A"
        />
      </TouchableWithoutFeedback>
    </View>
    <Text
      accessibilityLabel="textField-helperText"
      error={false}
      style={
        Object {
          "fontSize": 12,
          "marginTop": 2,
          "paddingLeft": 12,
        }
      }
      success={false}
      testID="textField-helperText"
    >
       
    </Text>
  </View>
  <View
    marginB-10={true}
  >
    <View
      paddingB-8={true}
      paddingL-12={true}
      paddingR-12={true}
      paddingT-8={true}
      style={
        Array [
          Object {
            "backgroundColor": "#FAFAF1",
            "borderRadius": 8,
          },
          undefined,
        ]
      }
    >
      <TouchableWithoutFeedback>
        <TextInput
          accessibilityLabel="resetPassword-passwordRepeat"
          allowFontScaling={true}
          autoCapitalize="none"
          color="#FAFAF1"
          enableErrors={false}
          floatOnFocus={true}
          floatingPlaceholder={true}
          floatingPlaceholderColor={
            Object {
              "default": "#FAFAF1",
              "error": "#FAFAF1",
              "focus": "#FAFAF1",
            }
          }
          floatingPlaceholderStyle={Object {}}
          hideUnderline={true}
          infoText={true}
          placeholder="Confirm password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Array [
              undefined,
              Object {
                "marginBottom": 4,
                "marginTop": -4,
              },
            ]
          }
          testID="resetPassword-passwordRepeat"
          underlineColorAndroid="transparent"
          value="pass-123Aaddition"
        />
      </TouchableWithoutFeedback>
    </View>
    <Text
      accessibilityLabel="textField-helperText"
      error={false}
      style={
        Object {
          "fontSize": 12,
          "marginTop": 2,
          "paddingLeft": 12,
        }
      }
      success={false}
      testID="textField-helperText"
    >
       
    </Text>
  </View>
  <View
    marginB-10={true}
  >
    <TouchableOpacity
      accessibilityLabel="resetPassword-submit"
      label="Reset password"
      loading={false}
      testID="resetPassword-submit"
    />
  </View>
</View>
`;

exports[`<ResetPasswordForm/> should successfully submit change 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    heading={true}
  >
    Reset password
  </Text>
  <View
    marginB-10={true}
  >
    <View
      paddingB-8={true}
      paddingL-12={true}
      paddingR-12={true}
      paddingT-8={true}
      style={
        Array [
          Object {
            "backgroundColor": "#FAFAF1",
            "borderRadius": 8,
          },
          undefined,
        ]
      }
    >
      <TouchableWithoutFeedback>
        <TextInput
          accessibilityLabel="resetPassword-newPassword"
          allowFontScaling={true}
          autoCapitalize="none"
          color="#FAFAF1"
          enableErrors={false}
          floatOnFocus={true}
          floatingPlaceholder={true}
          floatingPlaceholderColor={
            Object {
              "default": "#FAFAF1",
              "error": "#FAFAF1",
              "focus": "#FAFAF1",
            }
          }
          floatingPlaceholderStyle={Object {}}
          hideUnderline={true}
          infoText={true}
          placeholder="Enter new password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Array [
              undefined,
              Object {
                "marginBottom": 4,
                "marginTop": -4,
              },
            ]
          }
          testID="resetPassword-newPassword"
          underlineColorAndroid="transparent"
          value="pass-123A"
        />
      </TouchableWithoutFeedback>
    </View>
    <Text
      accessibilityLabel="textField-helperText"
      error={false}
      style={
        Object {
          "fontSize": 12,
          "marginTop": 2,
          "paddingLeft": 12,
        }
      }
      success={false}
      testID="textField-helperText"
    >
       
    </Text>
  </View>
  <View
    marginB-10={true}
  >
    <View
      paddingB-8={true}
      paddingL-12={true}
      paddingR-12={true}
      paddingT-8={true}
      style={
        Array [
          Object {
            "backgroundColor": "#FAFAF1",
            "borderRadius": 8,
          },
          undefined,
        ]
      }
    >
      <TouchableWithoutFeedback>
        <TextInput
          accessibilityLabel="resetPassword-passwordRepeat"
          allowFontScaling={true}
          autoCapitalize="none"
          color="#FAFAF1"
          enableErrors={false}
          floatOnFocus={true}
          floatingPlaceholder={true}
          floatingPlaceholderColor={
            Object {
              "default": "#FAFAF1",
              "error": "#FAFAF1",
              "focus": "#FAFAF1",
            }
          }
          floatingPlaceholderStyle={Object {}}
          hideUnderline={true}
          infoText={true}
          placeholder="Confirm password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Array [
              undefined,
              Object {
                "marginBottom": 4,
                "marginTop": -4,
              },
            ]
          }
          testID="resetPassword-passwordRepeat"
          underlineColorAndroid="transparent"
          value="pass-123A"
        />
      </TouchableWithoutFeedback>
    </View>
    <Text
      accessibilityLabel="textField-helperText"
      error={false}
      style={
        Object {
          "fontSize": 12,
          "marginTop": 2,
          "paddingLeft": 12,
        }
      }
      success={false}
      testID="textField-helperText"
    >
       
    </Text>
  </View>
  <View
    marginB-10={true}
  >
    <TouchableOpacity
      accessibilityLabel="resetPassword-submit"
      label="Reset password"
      loading={false}
      testID="resetPassword-submit"
    />
  </View>
</View>
`;
